css: Fix body flex alignment

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
 }
 
 .bordered input[type=checkbox] {
